# GameForge

./: CMakeLists.txt  README.md
include/private/: Aabb.hpp  Angle.hpp  Clock.hpp  Game_object.hpp  Game_object_component.hpp  Interpolation.hpp  Process.hpp  State_machine.hpp  Time.hpp  Transform2.hpp  Utilities.hpp  Vector2.hpp
include/private/components/: Position_solver.hpp
include/public/GameForge/: GameForge.hpp
src/: Aabb.cpp  Angle.cpp  Clock.cpp  Interpolation.cpp  Process.cpp  State_machine.cpp  Time.cpp  Transform2.cpp  Utilities.cpp
src/components/: Position_solver.cpp
tools/: lines.py
